# Nowcasting_webapp

./: .gitignore  .pre-commit-config.yaml  README.md  demo_calendar_availability.py  demo_time_picker_options.py  deployment_strategy.md  fit_diagrams.py  pyproject.toml  setup_mock_data.py  test_plotly_sync_zoom.py
docs/: MOCK_TESTING.md
scripts/: update_imports.py
src/nwc_webapp/: app.py  config.py  graphics.py  hello.py  layouts.py  logging_config.py  mock.py  utils.py  utils_old.py
src/nwc_webapp/background/: __init__.py  workers.py
src/nwc_webapp/config/: __init__.py  config.py  constants.py  environment.py  logging_config.py
src/nwc_webapp/core/: __init__.py  jobs.py  session.py  workers.py
src/nwc_webapp/data/: checking.py  create_dataset.py  dataset.py  gif_utils.py  groundtruth.py  loaders.py  predictions.py
src/nwc_webapp/evaluation/: __init__.py  metrics.py  plots.py
src/nwc_webapp/geo/: __init__.py  coordinates.py  shapefiles.py  warping.py
src/nwc_webapp/hpc/: __init__.py  jobs.py  pbs.py
src/nwc_webapp/mock/: __init__.py  generator.py  predictions.py  realtime.py
src/nwc_webapp/models/: __init__.py  predictions.py  services.py
src/nwc_webapp/page_modules/: csi_analysis.py  csi_utils.py  home.py  model_comparison.py  nowcasting.py  nowcasting_utils.py  prediction_by_date.py  real_time.py
src/nwc_webapp/pages/: __init__.py  common.py  csi_analysis.py  csi_helpers.py  home.py  model_comparison.py  nowcasting.py  nowcasting_helpers.py  prediction_by_date.py  real_time.py
src/nwc_webapp/pages/nowcasting/: __init__.py  gif_creation.py
src/nwc_webapp/pbs_scripts/: run_ED_ConvLSTM_inference.sh  run_IAM4VP_inference.sh  run_PredFormer_inference.sh  run_Test_inference.sh
src/nwc_webapp/pbs_scripts/real_time_pred_scripts/: run_ConvLSTM_inference_realtime.sh  run_IAM4VP_inference_realtime.sh  run_PredFormer_inference_realtime.sh  run_SPROG_inference_realtime.sh  run_Test_inference_realtime.sh  run_pystep_inference_realtime.sh
src/nwc_webapp/pbs_scripts/start_end_pred_scripts/: run_ConvLSTM_inference_startend.sh  run_ED_ConvLSTM_inference_startend.sh  run_IAM4VP_inference_startend.sh  run_PredFormer_inference_startend.sh  run_SPROG_inference_startend.sh
src/nwc_webapp/prediction/: jobs.py  loaders.py  visualization.py
src/nwc_webapp/rendering/: __init__.py  colormaps.py  figures.py  fit_diagram.py  gifs.py  visualization.py
src/nwc_webapp/resources/cfg/: cfg.yaml
src/nwc_webapp/scripts/: __init__.py  scripts.py  setup_mock_data.py
src/nwc_webapp/services/: data_service.py  mock_realtime_service.py  parallel_code.py  pbs.py  prediction_service.py  workers.py
src/nwc_webapp/ui/: components.py  layouts.py  maps.py  spinners.py  state.py
src/nwc_webapp/visualization/: __init__.py  colormaps.py  figures.py  fit_diagram.py
src/sole24oredemo/: config.py  hello.py  layouts.py  parallel_code.py  pbs.py  utils.py
src/sole24oredemo/cfg/: cfg.yaml
src/sole24oredemo/pbs_scripts/: run_ED_ConvLSTM_inference.sh
tests/: test_warping.py
(+30 files in other folders)
