[project]
name = "demo24ore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pip>=25.0",
    "streamlit>=1.41.1",
    "h5py>=3.0.0",
    "numpy>=1.26.0,<2.0.0",  # Python 3.12 compatible
    "pyproj>=3.5.0",
    "scipy>=1.11.0",  # Python 3.12 compatible
    "numba>=0.59.0",  # Python 3.12 compatible
    "matplotlib>=3.7.0",
    "pyaml>=24.4.0",
    "basemap>=1.4.1",
    "jupyterlab>=4.2.3",
    "ipykernel>=6.29.5",
    "rasterio>=1.4.0",
    "fiona>=1.9.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "scikit-image>=0.24.0",
    "deprecated>=1.2.0",
    "seaborn>=0.13.0",
    "ipympl>=0.9.6",
    "tqdm>=4.0.0",
    "streamlit-folium>=0.15.0",
    "folium>=0.14.0",
    "streamlit-autorefresh>=1.0.1",
    "branca>=0.6.0",
]
