[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nowcasting-webapp"
version = "0.1.0"
description = "Weather radar nowcasting web application with ML models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["weather", "nowcasting", "radar", "prediction", "streamlit"]
authors = [
    {name = "Matteo Guidi"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "streamlit>=1.41.1",
    "streamlit-autorefresh>=1.0.1",
    "streamlit-folium>=0.15.0",

    # Data processing (Python 3.12 compatible)
    "numpy>=1.26.0,<2.0.0",
    "scipy>=1.11.0",
    "h5py>=3.0.0",
    "numba>=0.59.0",
    "tqdm>=4.0.0",

    # Geospatial
    "pyproj>=3.5.0",
    "geopandas>=1.0.0",
    "rasterio>=1.4.0",
    "fiona>=1.9.0",
    "shapely>=2.0.0",
    "folium>=0.14.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "scikit-image>=0.24.0",
    "branca>=0.6.0",
    "basemap>=1.4.0",

    # Configuration
    "pyyaml>=6.0.0",

    # Development utilities
    "deprecated>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.2.3",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.6",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
nwc-webapp = "nwc_webapp.hello:main"

[tool.setuptools]
packages = ["nwc_webapp"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
nwc_webapp = [
    "resources/cfg/*.yaml",
    "resources/legends/**/*",
    "resources/shapefiles/**/*",
    "resources/mask/*.hdf",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=nwc_webapp"
